# refocus_light-field

./: .gitignore  CMakeLists.txt  CMakePresets.json  hello.cu  run.bat  run_release.bat
refocus_cmake/: CMakeLists.txt  kernel.cu  main.cpp  refocus.cpp  refocus_cmake copy.h  refocus_cmake.cpp  refocus_cmake.h  test.cu
refocus_cmake/include/: cuda_kernel.cuh  refocus.h
